# VECTRA-PLAYER

./: .gitignore  .lsp.json  .pr-agent.toml  .pre-commit-config.yaml  CLAUDE.md  COMPREHENSIVE_TODO_LIST.md  HEALTH_STATUS.md  README.md  README_CONFLICT_FIX.md  REPOSITORY_STATUS_REPORT.md  SOLUTION_SUMMARY.md  START_HERE.md  TODO.md  UI_CONFLICT_FIX_INSTRUCTIONS.md  UNRESOLVED_FINDINGS_SUMMARY.md  apply_conflict_fix.sh  pyproject.toml  pyrightconfig.json  run.sh  setup_pyright_lsp.sh  start_debugging.sh  ws_debug.html
.auto-claude/github/: config.json
.auto-claude/ideation/: code_improvements_ideas.json  code_quality_ideas.json  documentation_gaps_ideas.json  graph_hints.json  ideation.json  ideation_context.json  performance_optimizations_ideas.json  security_hardening_ideas.json  ui_ux_improvements_ideas.json
.auto-claude/insights/: current_session.json
.auto-claude/roadmap/: competitor_analysis.json  graph_hints.json  project_index.json  roadmap.json  roadmap_discovery.json
.claude/: hookify.block-custom-websocket.local.md  hookify.block-direct-cdp-websocket.local.md  hookify.block-direct-service-ports.local.md  hookify.block-foundation-embedded-logic.local.md  hookify.enforce-artifact-error-handling.local.md  hookify.enforce-foundation-state-usage.local.md  hookify.enforce-html-artifact-imports.local.md  hookify.enforce-html-foundation-client.local.md  hookify.enforce-layer-deps.local.md  hookify.enforce-manifest-required.local.md  hookify.enforce-manifest-schema.local.md  hookify.enforce-pinned-deps.local.md  hookify.enforce-port-allocation.local.md  hookify.enforce-project-id.local.md  hookify.enforce-subscriber-baseclass.local.md  hookify.enforce-subscriber-location.local.md  hookify.enforce-subscription-cleanup.local.md  scratchpad.md
.claude/commands/: bootstrap.md
.claude/plans/: tgoes-streamlit-system.md
.claude/prompts/: foundation-system-design.md  live-bot-integration.md
.claude/templates/: code-review-checklist.md  debugging-4phase.md  planning-template.md  tdd-checklist.md  verification-checklist.md
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template.md  release-changelog-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  ci-cd-issue.md  enhancement.md  feature_request.md  phase-10-4-websocket-verification.md
.github/scripts/: synthesize-reviews.js
.github/workflows/: ci.yml  claude.yml  code-review.yml  coverage.yml  guardrails.yml  pr-labeler.yml  quality.yml  release.yml  review-synthesis.yml  security.yml
.test_venv/: pyvenv.cfg
Machine Learning/strategies/: 219.json  beta-strat-03.json  theta_bayesian_conservative.json
docs/: ARCHITECTURE.md  CI_CD_GUIDE.md  CROSS_REPO_COORDINATION.md  DEBUGGING_GUIDE.md  DEVELOPMENT-PLAN-DASHBOARD.html  DEVOPS-STANDARDS.md  GUI_AUDIT_REPORT.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  MINIMAL_UI_AUDIT_REPORT.md  ML_RL_SYSTEM_OVERVIEW_AND_RESEARCH_PROMPT.md  ONBOARDING.md  PROCESS_FLOWCHARTS.md  PROCESS_FLOWCHARTS.md.backup  PR_SUMMARY_SOCKET_CLEANUP.md  QUICK_REFERENCE.md  REFACTORING_PLAN.md  REPLICATION_PROMPT.md  ROADMAP.md  SETUP_GUIDE.md  STATISTICAL-OPTIMIZATION-INTEGRATION.md  STATUS.md  VECTRA-START-FILES.md  WORKFLOW_ARCHITECTURE.md  nexus-ui-layout-v2.excalidraw  nexus-ui-layout.excalidraw.json  project-status.html
docs/BEST-DOCS/: 2025-12-28-pipeline-d-training-data-implementation.md  CHROME_PROFILE_SETUP.md  PROCESS_FLOWCHARTS.md  sidebet_optimization.ipynb
docs/PRNG CRACKING RESEARCH/: PRNG-QUICK-REFERENCE.md
docs/Scalp Research/: README.md
docs/Statistical Opt/: 00-ARCHITECTURE-OVERVIEW.md  03-EVENT-SYSTEM.md  05-DASHBOARD-UI.md  07-FOUNDATION-SERVICE.md
docs/Web Socket Events/: WEBSOCKET_EVENTS_SPEC.md
docs/issues/: ISSUE_00_COPILOT_TASK_INDEX.md  ISSUE_01_PRINT_TO_LOGGING.md  ISSUE_02_WILDCARD_IMPORT_FIX.md  ISSUE_03_LIVEFEED_CHARACTERIZATION_TESTS.md  ISSUE_04_PHASE_MARKER_CATEGORIZATION.md  ISSUE_05_AUDIT_FIX_SIMPLIFICATION.md  RUGS_BACKEND_RESEARCH_QUESTIONS.md
docs/plans/: 2025-12-15-canonical-database-design.md  2025-12-17-duckdb-query-layer-design.md  2025-12-21-phase-12d-system-validation-and-legacy-consolidation.md  2025-12-23-bot-action-interface-design.md  2025-12-23-expanded-event-schema-design.md  2025-12-24-rugs-knowledge-base-design.md  2025-12-24-shorting-integration-and-button-automation.md  2025-12-28-minimal-ui-design.md  2026-01-07-one-click-recording-toggle.md  2026-01-11-backtest-viewer-design.md  2026-01-15-typescript-frontend-api-redesign.md  2026-01-17-consolidation-plan.md  2026-01-18-bayesian-predictor-migration.md  2026-02-04-rugs-feed-service.md  2026-02-11-vectra-monorepo-migration.md  GLOBAL-DEVELOPMENT-PLAN.md  GUI_IMPROVEMENT_PLAN.md  (+2 more)
notebooks/: DELIVERABLE_SUMMARY.md  INDEX.md  PROBABILISTIC_REASONING.md  QUICK_REFERENCE.md  README.md  bayesian_sidebet_analysis.py  sidebet_optimization.ipynb  sidebet_optimizer_prototype.ipynb  sidebet_optimizer_v2.ipynb
sandbox/: 2025-12-15-phase-12-unified-data-architecture-design.md  WEBSOCKET_DISCOVERY_REPORT.md  duckdb_parquet_lancedb_migration_plan.md  explore_websocket_data.py  field_analysis.json  websocket_raw_samples.jsonl
scripts/: analyze_pre_rug_detailed.py  analyze_pre_rug_events.py  analyze_rug_mechanism.py  build_scalping_dataset.py  build_socket_kb.py  capture_event_structures.py  capture_gamehistory.py  capture_live_gamehistory.py  diagnose_game_state_events.py  diagnose_rec_button.py  export_for_julius.py  gen_excalidraw_v2.py  generate_scalping_outcome_visuals.py  monte_carlo_comparison.py  new-service.sh  record.sh  scalping_explorer_ctl.sh  schema_inventory.py  serve_rug_explorer.py  start.sh  start_bot.sh  start_dashboard.sh  stop_bot.sh  train_sidebet_v1.py  validate-branch-name.sh  validate-commit-msg.sh  validate_artifact.py  validate_ports.py  vectra_index.py  visual_rec_test.py  volatility_study.py  ws_monitor.py  ws_monitor_with_log.py
src/: AGENTS.md  COMPREHENSIVE_AUDIT_SUMMARY.md  QUICKREF.md  bot_config.json  config.py  main.py  pytest.ini  timing_overlay.json  verify_tests.sh
tests/: verify_contracts.py
(+825 files in other folders)
