[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vectra-player"
version = "0.12.0"
description = "Unified game replay and live trading platform with DuckDB/Parquet storage and VectorDB (ChromaDB) semantic search"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Dutchthenomad"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "ttkbootstrap>=1.10.0",
    "python-socketio[client]>=5.10.0",
    "websocket-client>=1.6.0",
    "playwright>=1.40.0",
    "typing_extensions>=4.0.0",
    "duckdb>=1.0.0",
    "pyarrow>=14.0.0",
    "pandas>=2.2.0",
    "sentence-transformers>=2.2.0",
    # Live backtest mode
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    # Foundation Service
    "aiohttp>=3.8.0",
    "websockets>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.3.0",
    "pre-commit>=4.0.0",
    "types-requests>=2.31.0",
]
ml = [
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

[project.urls]
"Homepage" = "https://github.com/Dutchthenomad/VECTRA-PLAYER"
"Bug Tracker" = "https://github.com/Dutchthenomad/VECTRA-PLAYER/issues"

[project.scripts]
vectra-player = "main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]

# =============================================================================
# RUFF - Linting & Formatting
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "deprecated",
    "external",
    ".worktrees",
    "sandbox",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "C4",     # flake8-comprehensions
    "N",      # pep8-naming
    "RUF",    # ruff-specific rules
    "PTH",    # flake8-use-pathlib
    "TCH",    # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (common pattern)
    "SIM108", # ternary operator (can reduce readability)
    # --- Temporarily ignored during migration (TODO(#1): enable incrementally) ---
    # Bugbear rules
    "B904",   # raise-without-from-inside-except
    "B007",   # unused-loop-control-variable
    "B905",   # zip-without-explicit-strict
    # Naming conventions (inherited from REPLAYER)
    "N806",   # non-lowercase-variable-in-function
    "N803",   # invalid-argument-name
    "N802",   # invalid-function-name
    "N815",   # mixed-case-variable-in-class-scope (93 issues)
    # Simplify rules
    "SIM102", # collapsible-if (22 issues)
    "SIM103", # needless-bool
    "SIM105", # use-contextlib-suppress (15 issues)
    "SIM115", # open-file-with-context-handler
    "SIM210", # if-expr-with-true-false
    "SIM300", # yoda-conditions
    # Pathlib (requires significant refactoring)
    "PTH",    # flake8-use-pathlib (lots of os.path usage)
    # Ruff-specific rules
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # comment-in-string (11 issues)
    "RUF005", # collection-literal-concatenation
    "RUF010", # explicit-f-string-type-conversion
    "RUF012", # mutable-class-default (23 issues)
    "RUF013", # implicit-optional (12 issues)
    "RUF015", # unnecessary-iterable-allocation-for-first-element (17 issues)
    "RUF022", # unsorted-dunder-all
    "RUF034", # useless-if-else
    # "RUF059", # invalid-return-type-annotation - rule not in ruff 0.8
    # Comprehension rules
    "C401",   # unnecessary-generator-set
    "C416",   # unnecessary-comprehension
    # Upgrade rules
    "UP007",  # non-pep604-annotation-union (X | Y vs Union)
    "UP017",  # datetime-timezone-utc
    # Type checking
    "TCH",    # typing-only imports (requires refactoring)
    # Pyflakes (from import * issues - inherited)
    "F405",   # may-be-undefined-from-import-star (43 issues)
    # Comparison
    "E712",   # comparison-to-true (96 issues - if x == True)
    # Import order (module-level imports)
    "E402",   # module-import-not-at-top-of-file (17 issues)
    # Unused variables and forward references (common in type hints)
    "F841",   # local-variable-is-assigned-but-never-used (22 issues)
    "F821",   # undefined-name (14 issues - string forward references)
]

[tool.ruff.lint.per-file-ignores]
"src/tests/**/*.py" = [
    "S101",   # assert allowed in tests
    "ARG",    # unused arguments (fixtures)
    "PLR2004", # magic values in tests
]
# winsound import is intentional - checking availability
"src/ui/audio_cue_player.py" = ["F401"]
# ttkbootstrap.constants uses * import pattern
"src/ui/ui_mockup_modern.py" = ["F403"]

[tool.ruff.lint.isort]
known-first-party = ["core", "services", "ui", "bot", "models", "sources"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# =============================================================================
# MYPY - Type Checking
# =============================================================================
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# --- Temporarily relaxed during migration (TODO(#1): enable incrementally) ---
warn_unused_configs = false
warn_unused_ignores = false
warn_redundant_casts = false
warn_return_any = false
no_implicit_optional = false
check_untyped_defs = false
strict_optional = false
exclude = [
    "deprecated/",
    "external/",
    ".worktrees/",
    "sandbox/",
    "venv/",
    ".venv/",
    "scripts/",  # Debug scripts have type issues
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true

# =============================================================================
# PYTEST
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "ui: marks tests requiring display",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"
timeout = 30
addopts = "-q --tb=short"

# =============================================================================
# COVERAGE
# =============================================================================
[tool.coverage.run]
source = ["src"]
omit = [
    "src/tests/*",
    "src/deprecated/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
fail_under = 60
